fixed navbar spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -262,3 +262,7 @@ input {
     transform: translateX(-50%);
 }
 
+.center-nav-bar {
+    margin: auto;
+}
+
